--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "description": "",
   "devDependencies": {
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@types/react": "^18.3.3",
+    "react": "^18.3.1"
   }
 }
