--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2016",                                
+    "baseUrl": "./store",
+    "target": "ES6",                                
     "module": "commonjs",                               
     "forceConsistentCasingInFileNames": true,          
     "strict": true,                                
-    "skipLibCheck": true                               
+    "skipLibCheck": true,
+    "esModuleInterop": true                               
   }
 }
