--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "baseUrl": "./store",
-    "target": "ES6",                                
-    "module": "commonjs",                               
-    "forceConsistentCasingInFileNames": true,          
-    "strict": true,                                
+    "target": "ES6",
+    "module": "commonjs",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "skipLibCheck": true,
-    "esModuleInterop": true                               
+    "esModuleInterop": true,
+    "jsx": "react"
   }
 }
