--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "simple_redux",
   "version": "1.0.0",
-  "main": "store_class",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +11,6 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@types/react": "^18.3.3",
-    "react": "^18.3.1"
+    "preact": "^10.22.0"
   }
 }
